尝试使用TS编写SDK

--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "./"
+  "homepage": "./",
+  "devDependencies": {
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.4"
+  }
 }
