--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.17.3",
     "js-md5": "^0.7.3",
+    "moment": "^2.29.1",
     "postcss": "^8.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
