设置紫外线灯的开关时间使用了自研的time-selector控件

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "homepage": "./",
   "devDependencies": {
+    "jsx-loader": "^0.13.2",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4"
   }
